[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_author = "vmaas-bot <40663028+vmaas-bot@users.noreply.github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["build", "chore", "ci", "fix", "perf", "refactor"]

[project]
name = "vmaas"
version = "3.2.9"
readme = "README.md"
packages = []
package-mode = false
requires-python = "~3.12"

dependencies = [
    "app-common-python>=0.2.5",
    "apscheduler>=3.10.4",
    "attrs (>=25.0.0,<26.0.0)",
    "boto3>=1.36.2",
    "botocore>=1.36.2",
    # Locked to 3.1.0 due to https://github.com/spec-first/connexion/issues/2029
    "connexion[swagger-ui]==3.1.0",
    "gitpython>=3.1.30",
    "psycopg2-binary>=2.8.6",
    "prometheus-client>=0.8.0",
    "pyopenssl>=25.0.0",
    "python-dateutil>=2.8.1",
    "pyyaml>=5.4.1",
    "requests>=2.32.0",
    "starlette>=0.47.1",
    "urllib3>=2.5.0",
    "uvicorn (>=0.35.0,<1.0.0)",
    "watchtower>=1.0.0",
    "zstandard (>=0.23.0,<0.24.0)",
]

[tool.poetry.group.dev.dependencies]
coverage = ">=4.5.3"
flake8 = ">=7.3.0"
ipython = ">=8.18.1"
mypy = ">=1.8.0"
pytest = ">=5.0.1"
pylint = ">=2.3.1"
pytest-cov = ">=2.7.1"
types-psycopg2 = "*"
types-pyOpenSSL = "*"
types-python-dateutil = "*"
types-PyYAML = "*"
types-requests = "*"
types-urllib3 = "*"

[build-system]
requires = ["poetry-core==2.1.3","rpds-py==0.24.0","setuptools-rust==1.11.1","setuptools==80.9.0","setuptools-scm==v9.1.1"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_return_any = true
warn_unreachable = true
follow_imports = "silent"
packages = """
    vmaas.reposcan.database.csaf_store,
    vmaas.reposcan.database.release_store,
    vmaas.reposcan.database.test.test_csaf,
    vmaas.reposcan.redhatcsaf,
    vmaas.reposcan.redhatrelease
"""
